# ShabeFramework

./: CMakeLists.txt  README.md  main.c  main.cpp  serv  server.c  server.h  temp2.html  test.cpp  testClient.c
examples/: main.c  temp1.html
libs/: acutest.h  alist.c  alist.h  map.c  map.h
src/: Dispatcher.c  Dispatcher.h  HttpStructures.c  HttpStructures.h  JSON.h  Parser.c  Parser.h  ShabeFramework.h  api_funcs.c  api_funcs.h  dispatcher.c  dispatcher.h  dspatcher.c  dspatcher.h  http_server.c  http_server.h  http_structures.c  http_structures.h  parser.c  parser.h  response.c  response.h  server.c  server.h  str_funcs.h  test
tests/: serv  test1  test1.txt  test_parser.c  test_server_requests.c  test_system.c  tests.c
