cmake_minimum_required(VERSION 3.10)
project(ShabeFramework)

set(CMAKE_CXX_STANDARD 11)
include_directories(src)
include_directories(libs)
include_directories(tests)
find_package(Threads)
set(SOURCE_FILES src/http_structures.c src/http_server.c libs/map.c src/parser.c src/dispatcher.c libs/alist.c)
add_executable(shabe ${SOURCE_FILES} examples/main.c)
#add_executable(shabe_test ${SOURCE_FILES} )
target_link_libraries (shabe ${CMAKE_THREAD_LIBS_INIT})
#target_link_libraries (shabe_test ${CMAKE_THREAD_LIBS_INIT})
SET(GCC_COVERAGE_COMPILE_FLAGS "-fno-stack-protector")
add_definitions(${GCC_COVERAGE_COMPILE_FLAGS})